# stalkware

./: NEWS  README  README.modules  TODO  autoclean.sh  configure.ac  stalkrc.sample
src/: DummyModule.cpp  DummyModule.h  IRCModule.cpp  IRCModule.h  Kernel.cpp  Kernel.h  Makefile.am  Module.h  TWModule.cpp  TWModule.h  stalkware.cpp
